--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "chat",
   "version": "1.0.0",
   "description": "",
-  "main": "app.js",
+  "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "node app.js",
-    "dev": "nodemon app.js"
+    "start": "node index.js",
+    "dev": "nodemon index.js"
   },
   "engines": {
     "node": "18.x"
@@ -27,9 +27,9 @@
     "mongoose": "^6.7.2",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
-    "nanoid": "^4.0.2",
+    "nanoid": "^4.0.2", 
     "nodemailer": "^6.8.0",
-    "pdfkit": "^0.13.0",
+    "pdfkit": "^0.13.0", 
     "slugify": "^1.6.6",
     "socket.io": "^4.6.1",
     "stripe": "^12.2.0"
