--- a/config/.env
+++ b/config/.env
@@ -11,5 +11,5 @@ API_KEY = "928524898381822"
 API_SECRET = "5azPQ27KQLxyfh9mi8JQnXzgjtw" 
 APP_NAME = 'Chat'
 END_POINT_SECRET = "whsec_MwbGBEagaAuIc1fzCxIDK7Az31WEudXS"
-BASE_URL = "https://chat-api-green.vercel.app"
+BASE_URL = " "
 CLIENT_URL = "http://localhost:5173"
